syntax = "proto3";

package greet;
option go_package="greetstreampb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}


message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string message = 1;
}


service GreetService {
    // Server Stream
    rpc LongGreetStream(stream LongGreetRequest) returns (LongGreetResponse){};
}
